training and detail section

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
           </div>
           <div class="nav">
             <button>
-              <a href="./detail.html"><strong>Detail</strong></a>
+              <a href="./training.html"><strong>Training</strong></a>
             </button>
             <button>
-              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+              <a href="./detail.html"><strong>Detail</strong></a>
             </button>
           </div>
           <div class="nav-contact">
