--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main-styles.css" />
-    <link rel="stylesheet" href="detail-styles.css" />
+    <link rel="stylesheet" href="detail.css" />
   </head>
 
   <body>
@@ -27,10 +27,10 @@
           </div>
           <div class="nav">
             <button>
-              <a href="./detail.html"><strong>Detail</strong></a>
+              <a href="./training.html"><strong>Training</strong></a>
             </button>
             <button>
-              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+              <a href="./detail.html"><strong>Detail</strong></a>
             </button>
           </div>
           <div class="nav-contact">
@@ -42,176 +42,30 @@
       </header>
       <!--Title-->
       <section class="section-title container-large">
-        <h1>Detail</h1>
+        <h1>Detail</em></h1>
       </section>
 
       <!--articles-->
-      <article class="container-large">
-        <div class="grid-container container-large">
-          <div class="grid-card">
-            <img
-              class="grid-img"
-              src="img/cards/caminos.jpg"
-              alt="bifurcació de camins"
-            />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>Choose your path</em></p>
-                <div class="icon-group">
-                  <ion-icon class="icon" name="logo-html5"></ion-icon>
-                  <ion-icon class="icon" name="logo-javascript"></ion-icon>
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a
-                  href="https://nvianaperez.github.io/TC-triaAventura/"
-                  target="_blank"
-                  >Live your JavaScript adventure!
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="grid-card">
-            <img
-              class="grid-img"
-              src="img/cards/neva.jpg"
-              alt="paisatge nevat"
-            />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>Snow for Christmas</em></p>
-                <div class="icon-group">
-                  <ion-icon class="icon" name="logo-html5"></ion-icon>
-                  <ion-icon class="icon" name="logo-javascript"></ion-icon>
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a
-                  href="https://nvianaperez.github.io/TC-NevaPerNadal/"
-                  target="_blank"
-                  >View beautiful postcard
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="grid-card">
-            <img
-              class="grid-img"
-              src="img/cards/caminosNode.jpg"
-              alt="camins entre boscos"
-            />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>Choose your path</em></p>
-                <div class="icon-group">
-                  <ion-icon name="logo-nodejs"></ion-icon>
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a
-                  href="https://github.com/nvianaperez/TC-triaAventura-Node.git"
-                  target="_blank"
-                  >Live your Node adventure!</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="grid-card">
-            <img
-              class="grid-img"
-              src="img/cards/nevaReact.jpg"
-              alt="boscos nevats"
-            />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>Christmas tree</em></p>
-                <div class="icon-group">
-                  <img
-                    class="icon-react"
-                    src="img/logos/React logo.png"
-                    width="10%"
-                  />
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a
-                  href="https://nvianaperez.github.io/TC-NevaPerNadal-React"
-                  target="_blank"
-                  >View the magic tree</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="grid-card">
-            <img
-              class="grid-img"
-              src="img/cards/INVIERNO-810x540.jpg"
-              alt="Exercises React"
-            />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>Exercises</em></p>
-                <div class="icon-group">
-                  <img
-                    class="icon-react"
-                    src="img/logos/React logo.png"
-                    width="10%"
-                  />
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a href="#" target="_blank">See the job!</a>
-              </div>
-            </div>
-          </div>
-          <div class="grid-card">
-            <img class="grid-img" src="img/cards/winterImg.jfif" alt="Others" />
-            <div class="grid-details">
-              <div class="grid-title">
-                <p><em>API Rest</em></p>
-                <div class="icon-group">
-                  <img
-                    class="icon-react"
-                    src="img/logos/React logo.png"
-                    width="10%"
-                  />
-                </div>
-              </div>
-              <div class="grid-description">
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Laudantium architecto qui, totam dolore optio explicabo
-                  praesentium repudiandae sed,
-                </p>
-                <a href="#" target="_blank">See the job!</a>
-              </div>
-            </div>
-          </div>
+      <article class="flex-article container-large">
+        <div class="tab-2">
+          <h2><u>Formación</u></h2>
+          <h3>Front End Developer, con React</h3>
+          <h5>De septiembre 2021 a abril 2022</h5>
+          <p><em>Bootcamp IT Academy</em> - Cibernàrium Centro de formación tecnológica de Barcelona Activa.</p>
+          <p>Bootcamp (240h) a <em>TecnoCampus Mataró-Maresme</em> (centro adscrito a la UPF).</p>
+          <p>Tecnologías: HTML5, CSS3, JS (ES6), Bootstrap, React, Github.</p>
+        </div>
+        <div class="tab-1">
+          <h2><u>Experiencia</u></h2>
+          <h3>Marketing en Alliance Healthcare, S.A.</h3>
+          <h5>De febrero 2009 a noviembre 2016</h5>
+          <p>- <em>CRM</em> Salesforce y Mobile Intelligence (+100 usuarios). </br></br>
+          - <em>QlikView</em>: desarrollo de dashboards y formación a equipos comerciales. </br></br>
+          - <em>Integración de datos</em> de sell out de farmacias. </br></br>
+          - Control del presupuesto del <em>Plan de marketing</em> (500K€ para 850 Farmacias). </br></br>
+          - <em>Comunicación B2B y B2C</em>. Coordinación con agencias. </br></br>
+          - Gestión de <em>campañas de PdV</em>. </br></br>
+          - Análisis de <em>category management</em>: ventas, stock y surtido. </br></br></p>
         </div>
       </article>
 
