--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           </div>
           <div class="nav">
             <button>
-              <a href="./detail.html"><strong>Detail</strong></a>
+              <a href="./training.html"><strong>Training</strong></a>
             </button>
             <button>
-              <a href="./clientTalking.html"><strong>Client talking</strong></a>
+              <a href="./detail.html"><strong>Detail</strong></a>
             </button>
           </div>
           <div class="nav-contact">
@@ -78,7 +78,7 @@
           ></i>
         </button>
         <button class="portfolio">
-          <a class="portfolio" href="/detail.html" target="_blank"><strong>PORTFOLIO</strong></a>
+          <a class="portfolio" href="/training.html" target="_blank"><strong>PORTFOLIO</strong></a>
         </button>
       </article>
 
