--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           ></i>
         </button>
         <button class="portfolio">
-          <a class="portfolio" href="/training.html" target="_blank"><strong>PORTFOLIO</strong></a>
+          <a class="portfolio" href="./training.html" target="_blank"><strong>PORTFOLIO</strong></a>
         </button>
       </article>
 
